--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ p, span, small, a, li {
 
 /* Hero */
 .section-box {
-  padding: 64px 73px;
+  padding: 64px 128px 73px 128px;
   border-radius: 48px;
   max-width: calc(100% - 110px);
   margin: 0 auto;
@@ -58,6 +58,44 @@ p, span, small, a, li {
 
 .mb-title {
   margin-bottom: clamp(64px, 12vw, 145px); /* For the "Hi, This is Carlo." gap */
+}
+
+/* About */
+.about-section {
+  background-color: #0f0f0f; /* your background color */
+  padding: 111px 108px 95px 80px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  margin-top: 130px;
+}
+
+.about-content {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 52px; /* the spacing between left and right columns */
+}
+
+.about-section h2 {
+  font-size: 2.5rem;
+  font-weight: 700;
+  color: #ffffff;
+  line-height: 1.3;
+}
+
+.about-section p {
+  color: #bfbfbf;
+  font-size: 1.25rem;
+  line-height: 1.6;
+}
+
+.project-section {
+  background-color: #0f0f0f; /* your background color */
+  padding: 121px 108px 95px 80px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 @font-face {
